fixed collapsable content

--- a/assets/collapsible-content.css
+++ b/assets/collapsible-content.css
@@ -28,7 +28,7 @@
 
 @media screen and (min-width: 990px) {
   .collapsible-content__grid {
-    grid-template-columns: 1.2fr 0.8fr;
+    grid-template-columns: 1fr 1fr;
     gap: 6rem;
   }
 }
